web-site/meditation-timer/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: meditation-timer
spec:
  type: ClusterIP
  selector:
    app: meditation-timer
  ports:
    - name: http
      port: 80
      targetPort: 3000
